mc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc-service
spec:
  selector:
    # change to your desired service name
    app: mc-service
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
